[B]Version 1.2.3[/B]
- Removed all usages of os.getcwd()

[B]Version 1.2.2[/B]
- Prepare for official repository

[B]Version 1.2.1[/B]
- Updated to danishaddons module 1.1.0

[B]Version 1.2.0[/B]
- Made it possible to set quality of streams, eg. high, medium, low
- Not all streams are available in all qualities
- Configurable through the plugin settings

[B]Version 1.1.0[/B]
- Renamed add-on to Danish Live TV to avoid confusion with DR NU Player
- Added streams for 24 Nordjyske and Folketinget TV

[B]Version 1.0.2[/B]
- Now uses library module for Danish addons

[B]Version 1.0.1[/B]
- Fixed logos

[B]Version 1.0.0[/B]
- Initial version