@@ -1,3 +1,7 @@
+[B]Version 1.3.0 - 2011-08-12[/B]
+- Removed dependency on script.module.danishaddons
+- Removed Folketinget as stream was broken
+
 [B]Version 1.2.3[/B]
 - Removed all usages of os.getcwd()
 
